chore: done with textual and alignment fixes

--- a/src/components/frruitGpt/BottomSearchBar.scss
+++ b/src/components/frruitGpt/BottomSearchBar.scss
@@ -112,7 +112,7 @@
             border: 1px solid #4563E4;
             background: #F1F4FD;
             height: 56px;
-            padding: 6px 16px 6px 160px;
+            padding: 6px 16px 6px 16px;
             width: 100%;
 
             @media only screen and (max-width: 500px) {
@@ -125,7 +125,7 @@
             border: 1px solid #4563E4;
             background: #F1F4FD;
             height: 56px;
-            padding: 6px 16px 6px 160px;
+            padding: 6px 16px 6px 16px;
             width: 100%;
 
             @media only screen and (max-width: 500px) {
@@ -147,7 +147,7 @@
             border: 1px solid #4563E4;
             background: #F1F4FD;
             height: 56px;
-            padding: 6px 16px 6px 160px;
+            padding: 6px 16px 6px 16px;
             width: 100%;
 
             @media only screen and (max-width: 500px) {
@@ -160,7 +160,7 @@
             border: 1px solid #4563E4;
             background: #F1F4FD;
             height: 56px;
-            padding: 6px 16px 6px 160px;
+            padding: 6px 16px 6px 16px;
             width: 100%;
 
             @media only screen and (max-width: 500px) {
