--- a/src/index.scss
+++ b/src/index.scss
@@ -508,6 +508,7 @@ button:not(:disabled) {
   .responsive-input-field {
     border: none;
     background-color: #F1F4FD;
+    text-align: center;
   }
 
   .responsive-input-field:focus-visible {
