--- a/src/screens/dashboard/Dashboard.scss
+++ b/src/screens/dashboard/Dashboard.scss
@@ -125,8 +125,9 @@
                     border: 1px solid #4563E4;
                     background: #F1F4FD;
                     height: 56px;
-                    padding: 6px 16px 6px 160px;
+                    padding: 6px 16px 6px 16px;
                     width: 100%;
+                    text-align: center;
 
                     @media only screen and (max-width: 500px) {
                         padding: 6px 16px 6px 16px;
@@ -138,8 +139,9 @@
                     border: 1px solid #4563E4;
                     background: #F1F4FD;
                     height: 56px;
-                    padding: 6px 16px 6px 160px;
+                    padding: 6px 16px 6px 16px;
                     width: 100%;
+                    text-align: center;
 
                     @media only screen and (max-width: 500px) {
                         padding: 6px 16px 6px 16px;
@@ -153,6 +155,7 @@
                     height: 56px;
                     padding: 6px 16px;
                     position: relative;
+                    text-align: center;
                 }
 
                 // .form-control::placeholder {
@@ -166,8 +169,9 @@
                     border: 1px solid #4563E4;
                     background: #F1F4FD;
                     height: 56px;
-                    padding: 6px 16px 6px 160px;
+                    padding: 6px 16px 6px 16px;
                     width: 100%;
+                    text-align: center;
 
                     @media only screen and (max-width: 500px) {
                         padding: 6px 16px 6px 16px;
@@ -185,8 +189,9 @@
                     border: 1px solid #4563E4;
                     background: #F1F4FD;
                     height: 56px;
-                    padding: 6px 16px 6px 160px;
+                    padding: 6px 16px 6px 16px;
                     width: 100%;
+                    text-align: center;
 
                     @media only screen and (max-width: 500px) {
                         padding: 6px 16px 6px 16px;
@@ -331,6 +336,7 @@
                 background: #F1F4FD;
                 height: 56px;
                 padding: 6px 16px;
+                text-align: center;
             }
         }
 
@@ -510,6 +516,7 @@
         height: 56px;
         padding: 6px 16px;
         width: 100%;
+        text-align: center;
     }
 
     .suggestions-box {
@@ -551,8 +558,9 @@
         border: 1px solid #4563E4;
         background: #F1F4FD;
         height: 56px;
-        padding: 6px 16px 6px 160px;
+        padding: 6px 16px 6px 16px;
         width: 100%;
+        text-align: center;
 
         @media only screen and (max-width: 500px) {
             padding: 6px 16px 6px 16px;
